manifest/setup/kubelab-web/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubelab-web
  labels:
    name: kubelab-web-ns
